css/balloons-and-static-electricity.css
.reset-button-container {
  position: absolute;
  bottom: -470px;
  left: 630px;
}

.switch-wall-button-container {
  position: absolute;
  bottom: -450px;
  left: 696px;
}

.switch-wall-button-container button {
  border:1px solid #000;
  padding: 4px 0;
  width: 70px;
  background-image: linear-gradient(top, rgb(254, 223, 50) 0%, rgb(232, 182, 34) 100%);
  background-image: -o-linear-gradient(top, rgb(254, 223, 50) 0%, rgb(232, 182, 34) 100%);
  background-image: -moz-linear-gradient(top, rgb(254, 223, 50) 0%, rgb(232, 182, 34) 100%);
  background-image: -webkit-linear-gradient(top, rgb(254, 223, 50) 0%, rgb(232, 182, 34) 100%);
  background-image: -ms-linear-gradient(top, rgb(254, 223, 50) 0%, rgb(232, 182, 34) 100%);

  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgb(254, 223, 50)), color-stop(1, rgb(232, 182, 34)));
}

.switch-wall-button-container button:hover {
  background-color: rgb(232, 182, 34);
}

#addWallButton {
  display: none;
}

.show-charges-choice-container {
  position: absolute;
  bottom: -412px;
  left: 70px;
}

.show-charges-choice-container button {
  text-align: left;
}

.btn:hover {
  color: #000;
}

.btn {
  color: #000;
}

.show-charges-choice-container i {
  float: left;
  margin: 3px 5px 0 0;
}

.show-balloons-choice-container {
  position: absolute;
  bottom: -404px;
  right: -510px;

}

.show-balloons-button {
  padding: 5px 5px;
  width: 40px;
  height: 34px;
  border: 2px solid black;
  border-radius: 3px;
  float: right;
  text-align: center;
  vertical-align: middle;
  background: white;
  margin: 4px;
  position: relative;
}

.show-balloons-button-unpressed {
  -webkit-box-shadow: 4px 4px 2px rgba(50, 50, 50, 0.9);
  -moz-box-shadow: 4px 4px 2px rgba(50, 50, 50, 0.9);
  box-shadow: 4px 4px 2px rgba(50, 50, 50, 0.9);
  left: -4px;
  top: -4px;
  cursor: pointer;
}

.show-balloons-button img {
  float: right;
  margin: 1px;
}

.reset-balloons-button button {
  border:1px solid #000;
  display: inline-block;
  margin-top: 4px;
  background-image: linear-gradient(top, rgb(254, 244, 158) 0%, rgb(222, 208, 55) 100%);
  background-image: -o-linear-gradient(top, rgb(254, 244, 158) 0%, rgb(222, 208, 55) 100%);
  background-image: -moz-linear-gradient(top, rgb(254, 244, 158) 0%, rgb(222, 208, 55) 100%);
  background-image: -webkit-linear-gradient(top, rgb(254, 244, 158) 0%, rgb(222, 208, 55) 100%);
  background-image: -ms-linear-gradient(top, rgb(254, 244, 158) 0%, rgb(222, 208, 55) 100%);

  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgb(254, 244, 158)), color-stop(1, rgb(222, 208, 55)));
}

.reset-balloons-button button:hover {
  background-color: rgb(222, 208, 55);
}

.reset-balloons-button {
  text-align: center;
}

.icon-refresh {
  background-image: none;
}

.reset-all-button,.reset-all-button:hover {
  color:white;
}

